Fix enterprise and student evaluation bugs